--- a/src/components/counter/index.css
+++ b/src/components/counter/index.css
@@ -2,12 +2,22 @@
 	display: grid;
 	grid-template-columns: repeat(16, 2rem);
 	grid-template-rows: 1rem;
-	justify-content: space-around;
+	justify-content: space-between;
+	margin: 2rem 0;
 }
 
 .counter {
 	height: 1em;
+	background: rgba(0, 0, 0, 0.25);
+	border-left: rgba(255, 255, 255, 0.25) 2px solid;
+	border-right: rgba(0, 0, 0, 0.25) 2px solid;
+	border-top: rgba(255, 255, 255, 0.25) 2px solid;
+	border-bottom: rgba(0, 0, 0, 0.25) 2px solid;
 }
 .counter.active {
-	background: red;
+	background: rgba(190, 0, 0);
+	border-left: rgba(255, 255, 255, 0.25) 2px solid;
+	border-right: rgba(0, 0, 0, 0.25) 2px solid;
+	border-top: rgba(255, 255, 255, 0.25) 2px solid;
+	border-bottom: rgba(0, 0, 0, 0.25) 2px solid;
 }
