--- a/src/components/step/index.css
+++ b/src/components/step/index.css
@@ -1,7 +1,40 @@
 .step {
+	outline: none;
 	border: 1px solid black;
+	background: lightgrey;
+	border-top: 5px solid rgba(255, 255, 255, 0.25);
+	border-bottom: 5px solid rgba(0, 0, 0, 0.25);
+	border-left: 5px solid rgba(255, 255, 255, 0.25);
+	border-right: 5px solid rgba(0, 0, 0, 0.25);
 }
 
 .step.selected {
-	background: papayawhip;
+	background: limegreen;
+	border-bottom: 5px solid rgba(255, 255, 255, 0.25);
+	border-top: 5px solid rgba(0, 0, 0, 0.25);
+	border-right: 5px solid rgba(255, 255, 255, 0.25);
+	border-left: 5px solid rgba(0, 0, 0, 0.25);
+}
+
+.step.active.selected {
+	animation: filter-animation 5s infinite;
+	background: rgba(255, 100, 100);
+	border-top: 5px solid rgba(255, 0, 0);
+	border-bottom: 5px solid rgba(255, 200, 200);
+	border-left: 5px solid rgba(255, 0, 0);
+	border-right: 5px solid rgba(255, 200, 200);
+}
+
+@keyframes filter-animation {
+	0% {
+		filter: hue-rotate(0deg);
+	}
+
+	50% {
+		filter: hue-rotate(1000deg);
+	}
+
+	100% {
+		filter: hue-rotate(0deg);
+	}
 }
