--- a/src/components/app.css
+++ b/src/components/app.css
@@ -1,12 +1,20 @@
 html {
 	font-size: 20px;
+	background: rebeccapurple;
 }
 
 body {
 	font-family: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue',
 		Helvetica, Arial, 'Lucida Grande', sans-serif;
 	font-weight: 300;
-	font-size: 16px;
 	margin: 0;
 	padding: 0;
+	perspective: 500px;
+}
+
+.app {
+	transform: rotate3d(1, 1, 1, 50deg);
+	margin: 0 15px;
+	margin-top: 600px;
+	margin-left: 500px;
 }
